Brought canvas to foreground to fix problem with canvas appearing behind boxes and highlighting them incorrectly
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9243 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -252,4 +252,4 @@ div.redaction-control {
 	}
 }
 
-#annotation-container { &, .highlight-canvas { position: absolute; } }
+#annotation-container { &, .highlight-canvas { position: absolute; z-index: 1; } }
